--- a/ecr.yaml
+++ b/ecr.yaml
@@ -48,15 +48,20 @@ spec:
                   type: integer
                   description: "Maximum number of images to keep"
                   default: 100
+                  minimum: 1
+                  maximum: 10000
                 kmsKeyArn:
-                  default: "my-kms-key-arn"
+                  default: ""
                   type: string
                   description: "KMS key ARN for encryption"
+                  example: "arn:aws:kms:us-east-1:123456789012:key/1234abcd-12ab-34cd-56ef-1234567890ab"
                 tags:
                   type: object
                   description: "AWS tags for the repository"
                   additionalProperties:
                     type: string
+                  example:
+                    foo: "bar"
                 deletionProtection:
                   type: boolean
                   description: "Enable deletion protection (prevents deletion if images exist)"
